--- a/css/password_gen.css
+++ b/css/password_gen.css
@@ -1,6 +1,9 @@
 body {  
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 1em;
+  padding-right: 5em;
   margin: 1em;
-  padding: 1em;
   font-family: Arial;
 }
 
