css blowback from removing bootstrap

--- a/css/password_gen.css
+++ b/css/password_gen.css
@@ -15,19 +15,26 @@ section#generator {
   display: block;
   width: 33%;
   border-style: solid;
-  text-align: left;
+  text-align: center;
   margin: 1em;
   padding: 1em;
   float: left;
+}
+
+fieldset { 
+  text-align: left;
 }
 
 input[type="number"] {
   width: 2.5em;
 }
 
+input[type="submit"] { 
+  margin-top: 1em;
+}
+
 section#about {
-  margin: 1em;
-  padding: 1em;
+  padding-top: .5em;
 }
 
 section#password { 
@@ -51,7 +58,7 @@ section#cartoon {
 }
 
 img { 
-
+  width: 90%;
 }
 
 
