More layout tweaks

--- a/css/password_gen.css
+++ b/css/password_gen.css
@@ -1,9 +1,6 @@
 body {  
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 1em;
-  padding-right: 5em;
   margin: 1em;
+  padding: 1em;
   font-family: Arial;
 }
 
@@ -16,8 +13,9 @@ section#generator {
   width: 33%;
   border-style: solid;
   text-align: center;
-  margin: 1em;
   padding: 1em;
+  margin: 1em;
+  margin-top: 0;
   float: left;
 }
 
@@ -33,10 +31,6 @@ input[type="submit"] {
   margin-top: 1em;
 }
 
-section#about {
-  padding-top: .5em;
-}
-
 section#password { 
   display: block;
   margin: 1em;
@@ -44,7 +38,7 @@ section#password {
   border-style: solid;
   float: left;
   clear: left;
-  width: 100%;
+  width: 95%;
 }
 
 section#cartoon {
@@ -54,7 +48,7 @@ section#cartoon {
   border-style: solid;
   padding: 1em;
   margin: 1em;
-  width: 100%;
+  width: 95%;
 }
 
 img { 
